--- a/Cinnabsin-RU/index-en.html
+++ b/Cinnabsin-RU/index-en.html
@@ -14,12 +14,14 @@
   <script custom-element="amp-list" src="https://cdn.ampproject.org/v0/amp-list-0.1.js" async></script>
   <script custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js" async></script>
   <link rel="canonical" href="https://preview.amp.dev/ru/documentation/components/amp-mega-menu.example.2.html">
+ <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width">
 
     <style amp-boilerplate>
         .disclamer {
-            font-size: 60px; color: rgb(108,117,125); text-align: center; font-family: sans-serif; font-weight: lighter;
-            margin: 0;
+            font-size: 30px; color: rgb(108,117,125); text-align: center; font-family: 'Open Sans Condensed', sans-serif; font-weight: lighter;
+            margin: auto; max-width: 80%; padding-bottom: 50px;
         }
         .pill{
             width: 33px;
@@ -76,9 +78,9 @@
         .disc-width-center {
             width: 40%;
         }
-        .disc-mob-back {
+/*        .disc-mob-back {
             width: 98%;
-        }
+        }*/
         .comp-4-mob {
             width: 100vw;height: 300px; margin: 100px 0; background-color: rgb(235, 235, 235);
         }
@@ -424,10 +426,16 @@
         <div class="paz-mob" style="height: 350px;  background-image: url('./images/pazuhi.jpg'); background-position: center;background-size: cover; background-repeat: no-repeat;"></div>
         <div class="paz-text" style="">
             <strong style="color: #e98300; font-family: sans-serif; font-weight: bolder;">How Cinnabisin works </strong>
-            <p style="font-family: sans-serif;">The main feature of Cinnabsin is its versatility of action. And this favorably distinguishes it from vasoconstrictor drops, which only restore nasal breathing, while causing dryness of the nasal mucosa, since they reduce its blood supply, disrupt the mucociliary transport - a natural mechanism for cleansing the sinuses and nasal mucosa. Cinnabsin restores nasal breathing, relieving swelling of the nasal mucosa and paranasal sinuses (due to anti-inflammatory and anti-edematous action), liquefies thick mucus, facilitates its passage, normalizing the natural mechanism of cleansing the nasal mucosa and paranasal sinuses. </p>
+            <p style="font-family: sans-serif;">The main feature of Cinnabsin is its versatility of action. And this favorably distinguishes it from vasoconstrictor drops, which only restore nasal breathing, while causing dryness of the nasal mucosa, since they reduce its blood supply, disrupt the mucociliary transport - a natural mechanism for cleansing the sinuses and nasal mucosa. Cinnabsin restores nasal breathing, relieving swelling of the nasal mucosa and paranasal sinuses (due to anti-inflammatory and anti-edematous action), liquefies thick mucus, facilitates its passage, normalizing the natural mechanism of cleansing the nasal mucosa and paranasal sinuses. 
+            <p style="font-family: sans-serif;">
+                            Another important advantage of Cinnabsin is its ability to increase the body's own defenses, which speeds up recovery and prevents recurrence of the disease. With Cinnabsin, noses and little noses are free!
+                        </p>
+                        <strong  style="color: #e98300; font-family: sans-serif; font-weight: bolder;">
+                            Runny nose, sinusitis? Cinnabsin! Breathe freely through your nose!
+                        </strong></p>
 
 
-            <amp-accordion class="accordion" animate>
+<!--             <amp-accordion class="accordion" animate>
 
                 <section>
                     <div style="width: 150px;padding: 10px 30px;background-color: #e98300;color:white;border-radius: 12px;font-family: sans-serif;box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);outline: none;" class="menu">Learn more</div>
@@ -443,7 +451,7 @@
                 </section>
 
 
-            </amp-accordion>
+            </amp-accordion> -->
 
 
         </div>
@@ -606,10 +614,11 @@
 </div>
 <div class="disc-mob-back" style="background-color: #f8f9fa;">
     <div style="display: flex; flex-direction: column;  max-width: 1200px; margin: auto; color: rgb(108,117,125);font-family: sans-serif;">
-        <p style="text-align: center; font-size: 28px;">Cinnabsin</p>
+        <!-- <p style="text-align: center; font-size: 28px;">Cinnabsin</p> -->
 <!--        <p style="text-align: center; font-size: 28px;">Эксклюзивный дистрибьютор: ПрАТ «Натурфарм» ул. Лесная-->
 <!--            30а, г. Киев, Пуща-Водица, 04075, телефон +38 (044) 401 81 03-->
 <!--        </p>-->
+        <p>Cinnabsin</p>
         <p>1. Thinesse-Mallwitz, M., Maydannik, V., Keller, T., Klement, P. A Homeopathic Combination Preparation in the Treatment of Feverish Upper Respiratory Tract Infections: An International Randomized Controlled Trial
         </p>
         <p>2. S.B. Bezshapochny et al., "Use of Cinnabsin medicine in treatment of patients with rhinosinusitis" // Rhinology 2,2006
