--- a/Cinnabsin-RU/index.html
+++ b/Cinnabsin-RU/index.html
@@ -14,12 +14,14 @@
   <script custom-element="amp-list" src="https://cdn.ampproject.org/v0/amp-list-0.1.js" async></script>
   <script custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js" async></script>
   <link rel="canonical" href="https://preview.amp.dev/ru/documentation/components/amp-mega-menu.example.2.html">
+ <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width">
 
     <style amp-boilerplate>
         .disclamer {
-            font-size: 60px; color: rgb(108,117,125); text-align: center; font-family: sans-serif; font-weight: lighter;
-            margin: 0;
+            font-size: 30px; color: rgb(108,117,125); text-align: center; font-family: 'Open Sans Condensed', sans-serif; font-weight: lighter;
+            margin: auto; max-width: 80%; padding-bottom: 50px;
         }
         .pill{
             width: 33px;
@@ -76,9 +78,9 @@
         .disc-width-center {
             width: 40%;
         }
-        .disc-mob-back {
+/*        .disc-mob-back {
             width: 98%;
-        }
+        }*/
         .comp-4-mob {
             width: 100vw;height: 300px; margin: 100px 0; background-color: rgb(235, 235, 235);
         }
@@ -431,10 +433,16 @@
         <div class="paz-mob" style="height: 350px;  background-image: url('./images/pazuhi.jpg'); background-position: center;background-size: cover; background-repeat: no-repeat;"></div>
         <div class="paz-text" style="">
             <strong style="color: #e98300; font-family: sans-serif; font-weight: bolder;">Принцип действия Циннабисина</strong>
-            <p style="font-family: sans-serif;">Главная особенность препарата Циннабсин — многопрофильность действия. И это выгодно отличает его от сосудосуживающих капель, которые только восстанавливают носовое дыхание, вызывая при этом сухость слизистой носа, поскольку они снижают её кровоснабжение, нарушают работу мукоцилиарного транспорта — естественного механизма очищения слизистой пазух и носа. Циннабсин восстанавливает носовое дыхание, снимая отёк слизистой носа и околоносовых пазух (за счёт противовоспалительного и противоотёчного действий), разжижает густую слизь, облегчает её отхождение, нормализуя естественный механизм очищения слизистой носа и околоносовых пазух.<sup>2</sup> </p>
+            <p style="font-family: sans-serif;">Главная особенность препарата Циннабсин — многопрофильность действия. И это выгодно отличает его от сосудосуживающих капель, которые только восстанавливают носовое дыхание, вызывая при этом сухость слизистой носа, поскольку они снижают её кровоснабжение, нарушают работу мукоцилиарного транспорта — естественного механизма очищения слизистой пазух и носа. Циннабсин восстанавливает носовое дыхание, снимая отёк слизистой носа и околоносовых пазух (за счёт противовоспалительного и противоотёчного действий), разжижает густую слизь, облегчает её отхождение, нормализуя естественный механизм очищения слизистой носа и околоносовых пазух.<sup>2</sup> 
+            <p style="font-family: sans-serif;">
+                            Ещё одним важным достоинством препарата Циннабсин является его способность повышать собственные защитные силы организма, что ускоряет выздоровление и препятствует повторному заболеванию.С препаратом Циннабсин носы и носики свободны!
+                        </p>
+                        <strong  style="color: #e98300; font-family: sans-serif; font-weight: bolder;">
+                            Насморк, гайморит? Циннабсин! Дышите носом свободно!
+                        </strong></p>
 
 
-            <amp-accordion class="accordion" animate>
+<!--             <amp-accordion class="accordion" animate>
 
                 <section>
                     <div style="width: 150px;padding: 10px 30px;background-color: #e98300;color:white;border-radius: 12px;font-family: sans-serif;box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);outline: none;" class="menu">Узнать больше</div>
@@ -450,7 +458,7 @@
                 </section>
 
 
-            </amp-accordion>
+            </amp-accordion> -->
 
 
         </div>
@@ -597,9 +605,10 @@
 </div>
 <div class="disc-mob-back" style="background-color: #f8f9fa;">
     <div style="display: flex; flex-direction: column;  max-width: 1200px; margin: auto; color: rgb(108,117,125);font-family: sans-serif;">
-        <p style="text-align: center; font-size: 28px;">ЦИННАБСИН</p>
+<!--         <p style="text-align: center; font-size: 28px;">ЦИННАБСИН</p>
         <p style="text-align: center; font-size: 28px;">
-        </p>
+        </p> -->
+        <p>ЦИННАБСИН</p>
         <p>1. Инструкция для медицинского использования к препарату Циннабсин
         </p>
         <p>2. Thinesse-Mallwitz, M., Maydannik, V., Keller, T., Klement, P. A Homeopathic Combination Preparation in the Treatment of Feverish Upper Respiratory Tract Infections: An International Randomized Controlled Trial
