--- a/Cinnabsin-UZ/index-uze.html
+++ b/Cinnabsin-UZ/index-uze.html
@@ -14,12 +14,14 @@
   <script custom-element="amp-list" src="https://cdn.ampproject.org/v0/amp-list-0.1.js" async></script>
   <script custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js" async></script>
   <link rel="canonical" href="https://preview.amp.dev/ru/documentation/components/amp-mega-menu.example.2.html">
+ <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width">
 
     <style amp-boilerplate>
         .disclamer {
-            font-size: 60px; color: rgb(108,117,125); text-align: center; font-family: sans-serif; font-weight: lighter;
-            margin: 0;
+            font-size: 30px; color: rgb(108,117,125); text-align: center; font-family: 'Open Sans Condensed', sans-serif; font-weight: lighter;
+            margin: auto; max-width: 80%; padding-bottom: 50px;
         }
         .pill{
             width: 33px;
@@ -76,9 +78,9 @@
         .disc-width-center {
             width: 40%;
         }
-        .disc-mob-back {
+/*        .disc-mob-back {
             width: 98%;
-        }
+        }*/
         .comp-4-mob {
             width: 100vw;height: 300px; margin: 100px 0; background-color: rgb(235, 235, 235);
         }
@@ -430,10 +432,16 @@
         <div class="paz-mob" style="height: 350px;  background-image: url('./images/pazuhi.jpg'); background-position: center;background-size: cover; background-repeat: no-repeat;"></div>
         <div class="paz-text" style="">
             <strong style="color: #e98300; font-family: sans-serif; font-weight: bolder;">Sinnabisinning ta’sir qilish mexanizmi</strong>
-            <p style="font-family: sans-serif;">SINOSAN preparatining asosiy xususiyati — keng qamrovli ta’sirga egaligidir. Bu uni tomir toraytiruvchi tomchilardan afzalligini ko’rsatadi, chunki tomir toraytiruvchi tomchilar faqatgina burundan nafas olishni tiklaydi, shu bilan birga burun shilliq qavatini qurib qolishiga, qon aylanishini kamayishiga, mukostiliar transport faoliyatini pasayishiga olib keladi — burun va yondosh bo’shliqlarni tabiiy tozalanish mexanizimini buzilishiga sabab bo’ladi. SINOSAN burun va burun yondosh bo’shliqlaridagi shishini bartaraf etib (yallig’lanishga va shishga qarshi ta’siri hisobiga), burundan nafas olishni tiklaydi, yopishqoq shilliqni suyultirib, uni chiqib ketishini yengillashtiradi,burun va burun yondosh bo’shliqlarining tabiiy tozalanishini me’yorlashtiradi.<sup>2</sup></p>
+            <p style="font-family: sans-serif;">SINOSAN preparatining asosiy xususiyati — keng qamrovli ta’sirga egaligidir. Bu uni tomir toraytiruvchi tomchilardan afzalligini ko’rsatadi, chunki tomir toraytiruvchi tomchilar faqatgina burundan nafas olishni tiklaydi, shu bilan birga burun shilliq qavatini qurib qolishiga, qon aylanishini kamayishiga, mukostiliar transport faoliyatini pasayishiga olib keladi — burun va yondosh bo’shliqlarni tabiiy tozalanish mexanizimini buzilishiga sabab bo’ladi. SINOSAN burun va burun yondosh bo’shliqlaridagi shishini bartaraf etib (yallig’lanishga va shishga qarshi ta’siri hisobiga), burundan nafas olishni tiklaydi, yopishqoq shilliqni suyultirib, uni chiqib ketishini yengillashtiradi,burun va burun yondosh bo’shliqlarining tabiiy tozalanishini me’yorlashtiradi.<sup>2</sup>
+            <p style="font-family: sans-serif;">
+                            SINOSAN preparatining yana bir afzalliklaridan biri bu organizmning himoya kuchlarini ko’tarish xususiyati hisoblanadi, u  tuzalishni tezlashtiradi va o’tkir jarayonni surunkali jarayonga o’tishiga yo’l qo’ymaydi. SINOSAN preparati bilan burun va burunchalar erkin nafas oladi!
+                        </p>
+                        <strong  style="color: #e98300; font-family: sans-serif; font-weight: bolder;">
+                            Tumov, gaymorit? SINOSAN! Burun bilan erkin nafas oling! 
+                        </strong></p>
 
 
-            <amp-accordion class="accordion" animate>
+           <!--  <amp-accordion class="accordion" animate>
 
                 <section>
                     <div style="width: 150px;padding: 10px 30px;background-color: #e98300;color:white;border-radius: 12px;font-family: sans-serif;box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);outline: none;" class="menu">To’liqroq ma’lumot olish uchun</div>
@@ -449,7 +457,7 @@
                 </section>
 
 
-            </amp-accordion>
+            </amp-accordion> -->
 
 
         </div>
@@ -612,11 +620,12 @@
 </div>
 <div class="disc-mob-back" style="background-color: #f8f9fa;">
     <div style="display: flex; flex-direction: column;  max-width: 1200px; margin: auto; color: rgb(108,117,125);font-family: sans-serif;">
-        <p style="text-align: center; font-size: 28px;">sinosan</p>
+<!--         <p style="text-align: center; font-size: 28px;">sinosan</p>
         <p style="text-align: center; font-size: 28px;">
             Eksklyuziv distribyutor: 
             OOO GLOBAL TEAM INNOVATION manzil: 100097, Toshkent sh., Chilonzor tumani, 6 kv, Chupon-ota ko’chasi, 39-uy 
-        </p>
+        </p> -->
+        <p>sinosan</p>
         <p>
             1. SINOSAN preparatini tibbiyotda qo’llash yo’riqnomasi
         </p>
@@ -636,6 +645,10 @@
             </div>
         </div>
         <div class="disc-width-center" style="">
+             <p style="">
+            Eksklyuziv distribyutor: 
+            OOO GLOBAL TEAM INNOVATION manzil: 100097, Toshkent sh., Chilonzor tumani, 6 kv, Chupon-ota ko’chasi, 39-uy 
+        </p> 
         </div>
         <div class="disc-width" style="display: flex; justify-content: flex-end; align-items: center;">
             <div style="line-height: 22px;">
