--- a/Cinnabsin-UZ/index.html
+++ b/Cinnabsin-UZ/index.html
@@ -14,12 +14,14 @@
   <script custom-element="amp-list" src="https://cdn.ampproject.org/v0/amp-list-0.1.js" async></script>
   <script custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js" async></script>
   <link rel="canonical" href="https://preview.amp.dev/ru/documentation/components/amp-mega-menu.example.2.html">
+ <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width">
 
     <style amp-boilerplate>
         .disclamer {
-            font-size: 60px; color: rgb(108,117,125); text-align: center; font-family: sans-serif; font-weight: lighter;
-            margin: 0;
+            font-size: 30px; color: rgb(108,117,125); text-align: center; font-family: 'Open Sans Condensed', sans-serif; font-weight: lighter;
+            margin: auto; max-width: 80%; padding-bottom: 50px;
         }
         .pill{
             width: 33px;
@@ -76,9 +78,9 @@
         .disc-width-center {
             width: 40%;
         }
-        .disc-mob-back {
+/*        .disc-mob-back {
             width: 98%;
-        }
+        }*/
         .comp-4-mob {
             width: 100vw;height: 300px; margin: 100px 0; background-color: rgb(235, 235, 235);
         }
@@ -434,10 +436,16 @@
         <div class="paz-mob" style="height: 350px;  background-image: url('./images/pazuhi.jpg'); background-position: center;background-size: cover; background-repeat: no-repeat;"></div>
         <div class="paz-text" style="">
             <strong style="color: #e98300; font-family: sans-serif; font-weight: bolder;">Принцип действия СИНОСАНА </strong>
-            <p style="font-family: sans-serif;">Главная особенность препарата СИНОСАН — многопрофильность действия. И это выгодно отличает его от сосудосуживающих капель, которые только восстанавливают носовое дыхание, вызывая при этом сухость слизистой носа, поскольку они снижают её кровоснабжение, нарушают работу мукоцилиарного транспорта — естественного механизма очищения слизистой пазух и носа. СИНОСАН восстанавливает носовое дыхание, снимая отёк слизистой носа и околоносовых пазух (за счёт противовоспалительного и противоотёчного действий), разжижает густую слизь, облегчает её отхождение, нормализуя естественный механизм очищения слизистой носа и околоносовых пазух.<sup>2</sup></p>
+            <p style="font-family: sans-serif;">Главная особенность препарата СИНОСАН — многопрофильность действия. И это выгодно отличает его от сосудосуживающих капель, которые только восстанавливают носовое дыхание, вызывая при этом сухость слизистой носа, поскольку они снижают её кровоснабжение, нарушают работу мукоцилиарного транспорта — естественного механизма очищения слизистой пазух и носа. СИНОСАН восстанавливает носовое дыхание, снимая отёк слизистой носа и околоносовых пазух (за счёт противовоспалительного и противоотёчного действий), разжижает густую слизь, облегчает её отхождение, нормализуя естественный механизм очищения слизистой носа и околоносовых пазух.<sup>2</sup>
+            <p style="font-family: sans-serif;">
+                Ещё одним важным достоинством препарата СИНОСАН является его способность повышать собственные защитные силы организма, что ускоряет выздоровление и препятствует повторному заболеванию. С препаратом СИНОСАН носы и носики свободны! 
+            </p>
+            <strong  style="color: #e98300; font-family: sans-serif; font-weight: bolder;">
+                Насморк, гайморит? СИНОСАН! Дышите носом свободно! 
+            </strong></p>
 
 
-            <amp-accordion class="accordion" animate>
+<!--             <amp-accordion class="accordion" animate>
 
                 <section>
                     <div style="width: 150px;padding: 10px 30px;background-color: #e98300;color:white;border-radius: 12px;font-family: sans-serif;box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);outline: none;" class="menu">Узнать больше</div>
@@ -453,7 +461,7 @@
                 </section>
 
 
-            </amp-accordion>
+            </amp-accordion> -->
 
 
         </div>
@@ -625,13 +633,14 @@
 </div>
 <div class="disc-mob-back" style="background-color: #f8f9fa;">
     <div style="display: flex; flex-direction: column;  max-width: 1200px; margin: auto; color: rgb(108,117,125);font-family: sans-serif;">
-        <p style="text-align: center; font-size: 28px;">СИНОСАН </p>
-        <p style="text-align: center; font-size: 28px;">Эксклюзивный дистрибьютор:  
+        <!-- <p style="text-align: center; font-size: 28px;">СИНОСАН </p> -->
+<!--         <p style="text-align: center; font-size: 28px;">Эксклюзивный дистрибьютор:  
 
 OOO GLOBAL TEAM INNOVATION 
 
 Адрес: 100097, г.Ташкент, Чиланзарский район, квл. 6, ул.Чупон-ота, дом № 39  
-        </p>
+        </p> -->
+        <p>СИНОСАН</p>
         <p>1. Инструкция для медицинского использования к препарату СИНОСАН
         </p>
         <p>2. Thinesse-Mallwitz, M., Maydannik, V., Keller, T., Klement, P. A Homeopathic Combination Preparation in the Treatment of Feverish Upper Respiratory Tract Infections: An International Randomized Controlled Trial
@@ -649,6 +658,12 @@ OOO GLOBAL TEAM INNOVATION
             </div>
         </div>
         <div class="disc-width-center" style="">
+        	<p style="">Эксклюзивный дистрибьютор:  
+
+OOO GLOBAL TEAM INNOVATION 
+
+Адрес: 100097, г.Ташкент, Чиланзарский район, квл. 6, ул.Чупон-ота, дом № 39  
+        </p>
         </div>
         <div class="disc-width" style="display: flex; justify-content: flex-end; align-items: center;">
             <div style="line-height: 22px;">
