--- a/Cinnabsin-UZ/index-uze.html
+++ b/Cinnabsin-UZ/index-uze.html
@@ -21,7 +21,7 @@
     <style amp-boilerplate>
         .disclamer {
             font-size: 30px; color: rgb(108,117,125); text-align: center; font-family: 'Open Sans Condensed', sans-serif; font-weight: lighter;
-            margin: auto; max-width: 80%; padding-bottom: 50px;
+            margin: auto; max-width: 92%; padding-bottom: 50px;
         }
         .pill{
             width: 33px;
@@ -480,9 +480,11 @@
                 <amp-accordion class="accordion" animate>
 
                     <section>
-                        <div style="margin: auto; width: 150px;padding: 10px 30px;background-color: #e98300;color:white;border-radius: 12px;font-family: sans-serif;box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);outline: none; text-align: center" class="menu">Batafsil</div>
+                        <div style="margin: auto; width: 150px;padding: 10px 30px;background-color: #e98300;color:white;border-radius: 12px;font-family: sans-serif;box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);outline: none; text-align: center" class="menu">Batafsil
+                        </div>
                         <div>
-                            <div style="display: flex; justify-content: center;margin: 20px 0;">
+                            <div>
+                                <div style="display: flex; justify-content: center;margin: 20px 0;">
                                 <div class="pill"></div>
                                 <div class="pill"></div>
                                 <div class="pill"></div>
@@ -504,6 +506,8 @@
                             <p style="font-family: sans-serif;text-align: center;">
                                 (kuniga 1 tabletkadan 3 marta) <br>Kurs davomiyligi 4-6 xafta 
                             </p>
+                            </div>
+                        
                         </div>
                     </section>
                 </amp-accordion>
