--- a/Cinnabsin-by/index.html
+++ b/Cinnabsin-by/index.html
@@ -21,7 +21,7 @@
     <style amp-boilerplate>
         .disclamer {
             font-size: 30px; color: rgb(108,117,125); text-align: center; font-family: 'Open Sans Condensed', sans-serif; font-weight: lighter;
-            margin: auto; max-width: 80%; padding-bottom: 50px;
+            margin: auto; max-width: 92%; padding-bottom: 50px;
         }
         .pill{
             width: 33px;
@@ -572,7 +572,7 @@
 </div>
 <div style="width: 100vw; margin: 50px 0;">
     <div class="media-column" style="display: flex; justify-content: space-evenly; max-width: 1200px; margin: auto; align-items: center">
-        <a target="_blank" href="https://tabletka.by/search?request=%D1%86%D0%B8%D0%BD%D0%BD%D0%B0%D0%B1%D1%81%D0%B8%D0%BD" style="width: 200px; height: 100px;border-radius: 10px;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);margin-bottom: 20px;background-image: url('./images/logotab.png'); background-position: center;background-size: contain; background-repeat: no-repeat;"></a>
+        <a target="_blank" href="https://tabletka.by/search?request=%D1%86%D0%B8%D0%BD%D0%BD%D0%B0%D0%B1%D1%81%D0%B8%D0%BD" style="width: 200px; height: 100px;border-radius: 10px;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);margin-bottom: 20px;background-image: url('./images/logotab.png'); background-position: center;background-size: 80%; background-repeat: no-repeat;"></a>
     </div>
 </div>
 <div class="disc-mob-back" style="background-color: #f8f9fa;">
