--- a/Cinnabsin-by/index.html
+++ b/Cinnabsin-by/index.html
@@ -570,6 +570,7 @@
 <div style="position: absolute;height: 100vh;margin-top: -10vh;" >
     <a name="block-4"></a>
 </div>
+<p style="max-width: 1200px; margin: auto; font-size: 25px; text-align: center; font-family: sans-serif;padding: 0 40px;">Где купить</p>
 <div style="width: 100vw; margin: 50px 0;">
     <div class="media-column" style="display: flex; justify-content: space-evenly; max-width: 1200px; margin: auto; align-items: center">
         <a target="_blank" href="https://tabletka.by/search?request=%D1%86%D0%B8%D0%BD%D0%BD%D0%B0%D0%B1%D1%81%D0%B8%D0%BD" style="width: 200px; height: 100px;border-radius: 10px;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);margin-bottom: 20px;background-image: url('./images/logotab.png'); background-position: center;background-size: 80%; background-repeat: no-repeat;"></a>
