--- a/Cinnabsin-by/index.html
+++ b/Cinnabsin-by/index.html
@@ -348,9 +348,9 @@
         <div class="shma" style=""></div>
         <h1 class="main-text" style="" >НАСМОРК? ГАЙМОРИТ?<br>ЦИННАБСИН ОТ СМАРКАЧА ОСВОБОДИТ!</h1>
         <ul class="main-text_ul" style="">
-            <li style="margin-bottom: 20px;">Устраняет заложенность носа и головную боль при насморке и гайморите</li>
-            <li style="margin-bottom: 20px;">Нормализует естественное очищение слизистой носа и околоносовых пазух</li>
-            <li style="margin-bottom: 20px;">Ускоряет выздоровление и препятствует повторным заболеваниям </li>
+            <li style="margin-bottom: 20px;">Устраняет заложенность носа и головную боль при насморке и гайморите<sup>2</sup></li>
+            <li style="margin-bottom: 20px;">Нормализует естественное очищение слизистой носа и околоносовых пазух<sup>4</sup></li>
+            <li style="margin-bottom: 20px;">Ускоряет выздоровление и препятствует повторным заболеваниям<sup>4</sup> </li>
         </ul>
     </div>
 </div>
@@ -585,10 +585,13 @@
         <p>ЦИННАБСИН</p>
         <p>1. Инструкция для медицинского использования к препарату Циннабсин
         </p>
-        <p>2. Thinesse-Mallwitz, M., Maydannik, V., Keller, T., Klement, P. A Homeopathic Combination Preparation in the Treatment of Feverish Upper Respiratory Tract Infections: An International Randomized Controlled Trial
+        <p>2. ЦИННАБСИН В КОМПЛЕКСНОМ ЛЕЧЕНИИ СИНУСИТОВ У ДЕТЕЙ. М. Р. Богомильский, Т. И. Гаращенко, Г. Л. Балясинская, А.П. Якушенкова, Л. С. Калюжина (РГМУ, Москва).
         </p>
         <p>3. С.Б. Безшапочний та співавт., «Застосування препарату «Цинабсин» у лікуванні пацієнтів з риносинуситом» // Ринологія 2,2006
         	
+        </p>
+        <p>
+            ПРИМЕНЕНИЕ ПРЕПАРАТА "ЦИННАБСИН" В ЛЕЧЕНИИ БОЛЬНЫХ РИНОСИНУСИТОМ.  С.Б. Безшапочный, О.Г. Подовжний, В.В. Лобурец. Украина. Ринология, №2, 2006
         </p>
     </div>
     <div class="media-column" style="display: flex;justify-content: space-evenly; color: rgb(108,117,125); padding: 50px 0; align-items: center; font-family: sans-serif;">
