--- a/Cinnabsin-by/index.html
+++ b/Cinnabsin-by/index.html
@@ -591,7 +591,7 @@
         	
         </p>
         <p>
-            ПРИМЕНЕНИЕ ПРЕПАРАТА "ЦИННАБСИН" В ЛЕЧЕНИИ БОЛЬНЫХ РИНОСИНУСИТОМ.  С.Б. Безшапочный, О.Г. Подовжний, В.В. Лобурец. Украина. Ринология, №2, 2006
+            4. ПРИМЕНЕНИЕ ПРЕПАРАТА "ЦИННАБСИН" В ЛЕЧЕНИИ БОЛЬНЫХ РИНОСИНУСИТОМ.  С.Б. Безшапочный, О.Г. Подовжний, В.В. Лобурец. Украина. Ринология, №2, 2006
         </p>
     </div>
     <div class="media-column" style="display: flex;justify-content: space-evenly; color: rgb(108,117,125); padding: 50px 0; align-items: center; font-family: sans-serif;">
