--- a/Cinnabsin-RU/index.html
+++ b/Cinnabsin-RU/index.html
@@ -597,11 +597,11 @@
 <p style="max-width: 1200px; margin: auto; font-size: 25px; text-align: center; font-family: sans-serif;">Где купить</p>
 <div style="width: 100vw; margin: 50px 0;">
     <div class="media-column" style="display: flex; justify-content: space-evenly; max-width: 1200px; margin: auto; align-items: center">
-        <a target="_blank" href="https://www.asna.ru/search/?q=%D0%A6%D0%B8%D0%BD%D0%BD%D0%B0%D0%B1%D1%81%D0%B8%D0%BD" style="width: 200px; height: 100px;border-radius: 10px;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);margin-bottom: 20px;background-image: url('./images/logo.svg'); background-position: center;background-size: contain; background-repeat: no-repeat;"></a>
-        <a target="_blank" href="https://vitaexpress.ru/catalog/lekarstva-i-bady/lekarstva-ot-prostudy/tsinnabsin-tab-100-d-lechen-sinusitov/" style="width: 200px; height: 100px;border-radius: 10px;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);margin-bottom: 20px;background-image: url('./images/logo (1).svg'); background-position: center;background-size: contain; background-repeat: no-repeat;"></a>
-        <a target="_blank" href="https://www.piluli.ru/search_result.html?q=%D1%86%D0%B8%D0%BD%D0%BD%D0%B0%D0%B1%D1%81%D0%B8%D0%BD" style="width: 200px; height: 100px;border-radius: 10px;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);margin-bottom: 20px;background-image: url('./images/logo.png'); background-position: center;background-size: contain; background-repeat: no-repeat;"></a>
-        <a target="_blank" href="https://www.rigla.ru/search?q=%25D1%2586%25D0%25B8%25D0%25BD%25D0%25BD%25D0%25B0%25D0%25B1%25D1%2581%25D0%25B8%25D0%25BD" style="width: 200px; height: 100px;border-radius: 10px;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);margin-bottom: 20px;background-image: url('./images/rigla-1024x358.png'); background-position: center;background-size: contain; background-repeat: no-repeat;"></a>
-        <a target="_blank" href="https://gorzdrav.org/search/?text=%D1%86%D0%B8%D0%BD%D0%BD%D0%B0%D0%B1%D1%81%D0%B8%D0%BD" style="width: 200px; height: 100px;border-radius: 10px;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);margin-bottom: 20px;background-image: url('./images/9970132320286.png'); background-position: center;background-size: contain; background-repeat: no-repeat;"></a>
+        <a target="_blank" href="https://www.asna.ru/search/?q=%D0%A6%D0%B8%D0%BD%D0%BD%D0%B0%D0%B1%D1%81%D0%B8%D0%BD" style="width: 200px; height: 100px;border-radius: 10px;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);margin-bottom: 20px;background-image: url('./images/icon_asna_400x200px.jpg'); background-position: center;background-size: 80%; background-repeat: no-repeat;"></a>
+        <a target="_blank" href="https://vitaexpress.ru/catalog/lekarstva-i-bady/lekarstva-ot-prostudy/tsinnabsin-tab-100-d-lechen-sinusitov/" style="width: 200px; height: 100px;border-radius: 10px;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);margin-bottom: 20px;background-image: url('./images/logo (1).svg'); background-position: center;background-size: 80%; background-repeat: no-repeat;"></a>
+        <a target="_blank" href="https://www.piluli.ru/search_result.html?q=%D1%86%D0%B8%D0%BD%D0%BD%D0%B0%D0%B1%D1%81%D0%B8%D0%BD" style="width: 200px; height: 100px;border-radius: 10px;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);margin-bottom: 20px;background-image: url('./images/logo.png'); background-position: center;background-size: 80%; background-repeat: no-repeat;"></a>
+        <a target="_blank" href="https://www.rigla.ru/search?q=%25D1%2586%25D0%25B8%25D0%25BD%25D0%25BD%25D0%25B0%25D0%25B1%25D1%2581%25D0%25B8%25D0%25BD" style="width: 200px; height: 100px;border-radius: 10px;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);margin-bottom: 20px;background-image: url('./images/rigla-1024x358.png'); background-position: center;background-size: 80%; background-repeat: no-repeat;"></a>
+        <a target="_blank" href="https://gorzdrav.org/search/?text=%D1%86%D0%B8%D0%BD%D0%BD%D0%B0%D0%B1%D1%81%D0%B8%D0%BD" style="width: 200px; height: 100px;border-radius: 10px;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);margin-bottom: 20px;background-image: url('./images/9970132320286.png'); background-position: center;background-size: 80%; background-repeat: no-repeat;"></a>
     </div>
 </div>
 <div class="disc-mob-back" style="background-color: #f8f9fa;">
@@ -614,7 +614,7 @@
         </p>
         <p>2. Thinesse-Mallwitz, M., Maydannik, V., Keller, T., Klement, P. A Homeopathic Combination Preparation in the Treatment of Feverish Upper Respiratory Tract Infections: An International Randomized Controlled Trial
         </p>
-        <p>Бесшапочный С.Б. Журнал «Ринология», 2006 г. №2 стр. 24-29.
+        <p>3. Бесшапочный С.Б. Журнал «Ринология», 2006 г. №2 стр. 24-29.
         </p>
     </div>
     <div class="media-column" style="display: flex;justify-content: space-evenly; color: rgb(108,117,125); padding: 50px 0; align-items: center; font-family: sans-serif;">
