--- a/Cinnabsin-RU/index.html
+++ b/Cinnabsin-RU/index.html
@@ -626,14 +626,13 @@
             </div>
         </div>
         <div class="disc-width-center" style="">
-            <p>Реклама лекарственного препарата. Перед применением ознакомьтесь с инструкцией по применению
+<!--             <p>Реклама лекарственного препарата. Перед применением ознакомьтесь с инструкцией по применению
                 и проконсультируйтесь с врачом. Хранить в недоступном для детей месте. Циннабсин
                 №UA/6790/01/01 от 09.08.2017
-            </p>
+            </p> -->
             <p>
-                Поставщик «Альпен Фарма АГ» (Швейцария). Производитель - DHU (Германия)
-                www.dhu.de Эксклюзивный дистрибьютор - Фармацевтическая компания ЧАО «Натурфарм», г. Киев,
-                Пуща-Водица, ул. Лесная, 30а, тел.: +38 (044) 303 91 10 www.naturpharma.ua
+                Официальный представитель в России:
+ООО “Альпен Фарма” 117513, г. Москва, ул. Островитянова, д.6 Тел./факс: +7 (495) 609-65-72 www.alpenpharma.com info.russia@alpenpharma.com
             </p>
         </div>
         <div class="disc-width" style="display: flex; justify-content: flex-end; align-items: center;">
