--- a/Cinnabsin-RU/index.html
+++ b/Cinnabsin-RU/index.html
@@ -279,9 +279,9 @@
                     <li class="menu-li">
                         <a  href="#block-4" role="button">Где купить</a>
                     </li>
-                    <li class="menu-li">
+<!--                     <li class="menu-li">
                         <a  href="./index-en.html" role="button">en</a>
-                    </li>
+                    </li> -->
                 </ul>
             </section>
     </amp-sidebar>
@@ -335,9 +335,9 @@
             <li>
                 <a  href="#block-4" role="button">Где купить</a>
             </li>
-            <li style="    margin-right: 30px;border: 1px solid rgb(108, 117, 125); border-radius: 5px;padding: 5px;">
+<!--             <li style="    margin-right: 30px;border: 1px solid rgb(108, 117, 125); border-radius: 5px;padding: 5px;">
                 <a href="index-en.html" style="margin-right: 0;" role="button">en</a>
-            </li>
+            </li> -->
         </ul>
     </nav>
 </amp-mega-menu>
