--- a/Cinnabsin-RU/index.html
+++ b/Cinnabsin-RU/index.html
@@ -29,6 +29,12 @@
             margin-right: 5px;
             background: url("./images/tabl.jpg") no-repeat center / contain;
         }
+        .pill-50 {
+        	width: 33px;
+            height: 33px;
+            margin-right: 5px;
+            background: url("./images/tabl_1.2.jpg") no-repeat center / contain;
+        }
         .main-text {
             position: relative; top: -60px; left: 120px; font-size: 32px; font-family: sans-serif; font-weight: 500;
         }
@@ -156,12 +162,12 @@
         .pack {
             height: 290px;
             width: 170px;
-            margin-left: 40px;
+            margin-left: 0px;
             background-size: contain;
         }
         .shma {
-            top: 221px;
-            left: 81px;
+            top: 200px;
+            left: 35px;
             position: absolute;
             height: 120px;
             width: 280px;
@@ -332,7 +338,7 @@
             <li>
                 <a  href="#block-3" role="button">Как принимать</a>
             </li>
-            <li>
+            <li style="margin-right: 40px;">
                 <a  href="#block-4" role="button">Где купить</a>
             </li>
 <!--             <li style="    margin-right: 30px;border: 1px solid rgb(108, 117, 125); border-radius: 5px;padding: 5px;">
@@ -501,7 +507,7 @@
                             </p>
                             <div style="display: flex; justify-content: center;margin: 20px 0;">
                                 <div class="pill"></div>
-                                <div class="pill"></div>
+                                <div class="pill-50"></div>
                             </div>
                         </div>
                     </section>
