--- a/Cinnabsin-RU/index.html
+++ b/Cinnabsin-RU/index.html
@@ -2,7 +2,7 @@
 <html ⚡>
 <head>
   <meta charset="utf-8">
-  <title>sinosan</title>
+  <title>cinnabsin</title>
   <script async src="https://cdn.ampproject.org/v0.js"></script>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
