--- a/Cinnabsin-UZ/index-uze.html
+++ b/Cinnabsin-UZ/index-uze.html
@@ -20,7 +20,7 @@
 
     <style amp-boilerplate>
         .disclamer {
-            font-size: 30px; color: rgb(108,117,125); text-align: center; font-family: 'Open Sans Condensed', sans-serif; font-weight: lighter;
+            font-size: 60px; color: rgb(108,117,125); text-align: center; font-family: 'Open Sans Condensed', sans-serif; font-weight: lighter;
             margin: auto; max-width: 92%; padding-bottom: 50px;
         }
         .pill{
@@ -637,7 +637,7 @@
             2. Thinesse-Mallwitz, M., Maydannik, V., Keller, T., Klement, P. A Homeopathic Combination Preparation in the Treatment of Feverish Upper Respiratory Tract Infections: An International Randomized Controlled Trial
         </p>
         <p>
-            3. S.B.Bezshapochniy taspіvavt., «Zastosuvannyapreparatu «Цinabsin»ulіkuvannіpastієntіvzrinosinusitom» // Rinologіya 2,2006
+            3. С.Б. Безшапочний та співавт., «Застосування препарату «Цинабсин» у лікуванні пацієнтів з риносинуситом» // Ринологія 2,2006
         </p>
     </div>
     <div class="media-column" style="display: flex;justify-content: space-evenly; color: rgb(108,117,125); padding: 50px 0; align-items: center; font-family: sans-serif;">
