--- a/Cinnabsin-RU/index.html
+++ b/Cinnabsin-RU/index.html
@@ -620,7 +620,7 @@
         </p>
         <p>2. Thinesse-Mallwitz, M., Maydannik, V., Keller, T., Klement, P. A Homeopathic Combination Preparation in the Treatment of Feverish Upper Respiratory Tract Infections: An International Randomized Controlled Trial
         </p>
-        <p>3. Бесшапочный С.Б. Журнал «Ринология», 2006 г. №2 стр. 24-29.
+        <p>3. С.Б. Безшапочний та співавт., «Застосування препарату «Цинабсин» у лікуванні пацієнтів з риносинуситом» // Ринологія 2,2006
         </p>
     </div>
     <div class="media-column" style="display: flex;justify-content: space-evenly; color: rgb(108,117,125); padding: 50px 0; align-items: center; font-family: sans-serif;">
