--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 			<a href="Cinnabsin-by/index.html">Cinnabsin-BY</a>
 			<a href="Cinnabsin-RU/index.html">Cinnabsin-RU</a>
 			<a href="Cinnabsin-UZ/index.html">Cinnabsin-UZ</a>
+			<a href="Cinnabsin-GE/index.html">Cinnabsin-GE</a>
 			
 		</section>
 	</main>
@@ -248,6 +249,9 @@
 	}
 	a:nth-child(51)::before {
 		background: url("./Cinnabsin-UZ/logo.svg")no-repeat center / contain;
+	}
+	a:nth-child(52)::before {
+		background: url("./Cinnabsin-GE/logo.svg")no-repeat center / contain;
 	}
 </style>
 
