--- a/Cinnabsin-GE/index-ru.html
+++ b/Cinnabsin-GE/index-ru.html
@@ -106,7 +106,7 @@
             position: relative; top: -70px; left: 25px; font-family: sans-serif;
         }
         .comp-3-p {
-            position: relative; top: -70px; left: 25px; font-family: sans-serif;
+            position: relative; top: -70px; left: 40px; font-family: sans-serif;
         }
         .comp-4-p {
             position: relative; top: -70px; left: 70px; font-family: sans-serif;
@@ -276,9 +276,9 @@
                     <li class="menu-li">
                         <a  href="#block-3" role="button">Как принимать</a>
                     </li>
-                    <li class="menu-li">
+<!--                     <li class="menu-li">
                         <a  href="#block-4" role="button">Где купить</a>
-                    </li>
+                    </li> -->
                     <li class="menu-li">
                         <a  href="./index.html" role="button">ge</a>
                     </li>
@@ -332,9 +332,9 @@
             <li>
                 <a  href="#block-3" role="button">Как принимать</a>
             </li>
-            <li>
+<!--             <li>
                 <a  href="#block-4" role="button">Где купить</a>
-            </li>
+            </li> -->
             <li style="    margin-right: 30px;border: 1px solid rgb(108, 117, 125); border-radius: 5px;padding: 5px;">
                 <a href="index.html" style="margin-right: 0;" role="button">ge</a>
             </li>
@@ -623,7 +623,7 @@
 <div style="position: absolute;height: 100vh;margin-top: -10vh;" >
     <a name="block-4"></a>
 </div>
-<p style="max-width: 1200px; margin: auto; font-size: 25px; text-align: center; font-family: sans-serif;">Где купить</p>
+<!-- <p style="max-width: 1200px; margin: auto; font-size: 25px; text-align: center; font-family: sans-serif;">Где купить</p> -->
 <div style="width: 100vw; margin: 50px 0;">
     <!-- <div class="media-column" style="display: flex; justify-content: space-evenly; max-width: 1200px; margin: auto; align-items: center">
         <div style="width: 200px; height: 100px;border-radius: 10px;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);margin-bottom: 20px;background-image: url('./images/logo-social.png'); background-position: center;background-size: cover; background-repeat: no-repeat;"></div>
@@ -672,7 +672,7 @@
             <div style="width: 65px;height: 55px;background-image: url('./images/logo-af.png');margin-left: 25px; background-position: center;background-size: cover; background-repeat: no-repeat;"></div>
         </div>
     </div>
-    <p class="disclamer" style="">САМОЛЕЧЕНИЕ МОЖЕТ БЫТЬ ОПАСНЫМ ДЛЯ ВАШЕГО ЗДОРОВЬЯ </p>
+    <!-- <p class="disclamer" style="">САМОЛЕЧЕНИЕ МОЖЕТ БЫТЬ ОПАСНЫМ ДЛЯ ВАШЕГО ЗДОРОВЬЯ </p> -->
 </div>
 </body>
 </html>
