--- a/Cinnabsin-GE/index.html
+++ b/Cinnabsin-GE/index.html
@@ -112,7 +112,7 @@
             position: relative; top: -70px; left: 25px; font-family: sans-serif;
         }
         .comp-3-p {
-            position: relative; top: -70px; left: 25px; font-family: sans-serif;
+            position: relative; top: -70px; left: 40px; font-family: sans-serif;
         }
         .comp-4-p {
             position: relative; top: -70px; left: 70px; font-family: sans-serif;
@@ -282,9 +282,9 @@
                     <li class="menu-li">
                         <a  href="#block-3" role="button">მიღების წესი </a>
                     </li>
-                    <li class="menu-li">
+<!--                     <li class="menu-li">
                         <a  href="#block-4" role="button">სად შევიძინოთ</a>
-                    </li>
+                    </li> -->
                     <li class="menu-li">
                         <a  href="./index.html" role="button">ru</a>
                     </li>
@@ -338,9 +338,9 @@
             <li>
                 <a  href="#block-3" role="button">მიღების წესი </a>
             </li>
-            <li>
+<!--             <li>
                 <a  href="#block-4" role="button">სად შევიძინოთ</a>
-            </li>
+            </li> -->
             <li style="    margin-right: 30px;border: 1px solid rgb(108, 117, 125); border-radius: 5px;padding: 5px;">
                 <a href="index-ru.html" style="margin-right: 0;" role="button">ru</a>
             </li>
@@ -350,7 +350,7 @@
 <div class="header-container" style="">
     <div style="position: relative; display: flex; max-width: 1200px; margin: auto;" class="media">
         <div class="pack" style="">
-            <a target="_blank" href="./info.pdf" style="text-decoration: none; color: black; position: absolute; top: 100%; left: 30%; padding: 10px 30px; background-color: #f5e41e; border-radius: 12px; font-family: sans-serif;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)" >Instruction</a>
+            <a target="_blank" href="./info.pdf" style="text-decoration: none; color: black; position: absolute; top: 100%; left: 30%; padding: 10px 30px; background-color: #f5e41e; border-radius: 12px; font-family: sans-serif;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)" >ანოტაცია</a>
 
         </div>
         <div class="shma" style=""></div>
@@ -622,7 +622,7 @@
 <div style="position: absolute;height: 100vh;margin-top: -10vh;" >
     <a name="block-4"></a>
 </div>
-<p style="max-width: 1200px; margin: auto; font-size: 25px; text-align: center; font-family: sans-serif;">სად შევიძინოთ?</p>
+<!-- <p style="max-width: 1200px; margin: auto; font-size: 25px; text-align: center; font-family: sans-serif;">სად შევიძინოთ?</p> -->
 <div style="width: 100vw; margin: 50px 0;">
     <!-- <div class="media-column" style="display: flex; justify-content: space-evenly; max-width: 1200px; margin: auto; align-items: center">
         <a target="_blank" href="https://www.asna.ru/search/?q=%D0%A6%D0%B8%D0%BD%D0%BD%D0%B0%D0%B1%D1%81%D0%B8%D0%BD" style="width: 200px; height: 100px;border-radius: 10px;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);margin-bottom: 20px;background-image: url('./images/icon_asna_400x200px.jpg'); background-position: center;background-size: 80%; background-repeat: no-repeat;"></a>
@@ -676,7 +676,7 @@
             <div style="width: 65px;height: 55px;background-image: url('./images/logo-af.png');margin-left: 25px; background-position: center;background-size: cover; background-repeat: no-repeat;"></div>
         </div>
     </div>
-    <p class="disclamer" style="">SELF-TREATMENT MAY BE DANGEROUS TO YOUR HEALTH</p>
+    <!-- <p class="disclamer" style="">SELF-TREATMENT MAY BE DANGEROUS TO YOUR HEALTH</p> -->
 </div>
 </body>
 </html>
