--- a/Cinnabsin-GE/index-ru.html
+++ b/Cinnabsin-GE/index-ru.html
@@ -638,11 +638,12 @@
         <p style="text-align: center; font-size: 28px;">Эксклюзивный дистрибьютор: ПрАТ «Натурфарм» ул. Лесная
             30а, г. Киев, Пуща-Водица, 04075, телефон +38 (044) 401 81 03
         </p> -->
-        <p>ЦИННАБСИН</p>
-        <p>1. Інформаційний лист МОЗ України №206-2013 «Спосіб лікування і профілактики гострих і
-            рецидивуючих риносинуситів»
+        <p>Доказательная база</p>
+        <p>1. Instruction for the use of medicine Cinnabsin 
         </p>
-        <p>2. С.Б. Безшапочний та співавт., «Застосування препарату «Цинабсин» у лікуванні пацієнтів з риносинуситом» // Ринологія 2,2006
+        <p>2. Thinesse-Mallwitz, M., Maydannik, V., Keller, T., Klement, P. A Homeopathic Combination Preparation in the Treatment of Feverish Upper Respiratory Tract Infections: An International Randomized Controlled Trial
+        </p>
+        <p>3. S.B. Bezshapochny et al., "Use of Cinnabsin medicine in treatment of patients with rhinosinusitis" // Rhinology 2,2006
         </p>
     </div>
     <div class="media-column" style="display: flex;justify-content: space-evenly; color: rgb(108,117,125); padding: 50px 0; align-items: center; font-family: sans-serif;">
