--- a/Cinnabsin-GE/index.html
+++ b/Cinnabsin-GE/index.html
@@ -637,7 +637,7 @@
 <!--         <p style="text-align: center; font-size: 28px;">ЦИННАБСИН</p>
         <p style="text-align: center; font-size: 28px;">
         </p> -->
-        <!-- <p>ЦИННАБСИН</p> -->
+        <p>მტკიცებულებითი ბაზა</p>
         <p>1. Instruction for the use of medicine Cinnabsin 
         </p>
         <p>2. Thinesse-Mallwitz, M., Maydannik, V., Keller, T., Klement, P. A Homeopathic Combination Preparation in the Treatment of Feverish Upper Respiratory Tract Infections: An International Randomized Controlled Trial
