--- a/Cinnabsin-GE/index.html
+++ b/Cinnabsin-GE/index.html
@@ -612,6 +612,11 @@
                                 <div class="pill"></div>
                                 <div class="pill"></div>
                             </div>
+                            <div style="display: flex; justify-content: center;margin: 20px 0;">
+                                <div class="pill"></div>
+                                <div class="pill"></div>
+                                <div class="pill"></div>
+                            </div>
                         </div>
                     </section>
                 </amp-accordion>
