--- a/Cinnabsin-GE/index-ru.html
+++ b/Cinnabsin-GE/index-ru.html
@@ -655,14 +655,15 @@
             </div>
         </div>
         <div class="disc-width-center" style="">
-            <p>Реклама лекарственного препарата. Перед применением ознакомьтесь с инструкцией по применению
-                и проконсультируйтесь с врачом. Хранить в недоступном для детей месте. Циннабсин
-                №UA/6790/01/01 от 09.08.2017
-            </p>
-            <p>
-                Поставщик «Альпен Фарма АГ» (Швейцария). Производитель - DHU (Германия)
-                www.dhu.de Эксклюзивный дистрибьютор - Фармацевтическая компания ЧАО «Натурфарм», г. Киев,
-                Пуща-Водица, ул. Лесная, 30а, тел.: +38 (044) 303 91 10 www.naturpharma.ua
+            <p>Представительский офис Alpen Pharma AG в Грузии.
+
+Юридический адрес: Грузия, Тбилиси, ул. Р. Агладзе 26, кор.5. кв.30
+
+Фактический адрес: Грузия, Тбилиси, ул. А. Мицкевича №27б. офис 508.
+
+Телефон: (+995) 32 261 46 88
+
+Моб: (+995) 595 22 92 94
             </p>
         </div>
         <div class="disc-width" style="display: flex; justify-content: flex-end; align-items: center;">
